Address code review feedback - fix deprecated API, add input validation
Co-authored-by: simonAchieve <166567775+simonAchieve@users.noreply.github.com>